refactor: Clean-up + javadoc